--- a/index.css
+++ b/index.css
@@ -49,13 +49,13 @@
 .control .status,
 .control .status-talk {
     width: 100vw;
-    text-align: left;
-    color: #000;
+    text-align: start;
+    color: #fff;
     z-index: 1;
     padding-left: 50px;
     padding-right: 20px;
     font-family: 'MedievalSharp', bold;
-    font-size: 20pt;
+    font-size: 30pt;
     font-weight: 700
 }
 
@@ -74,7 +74,7 @@
     height: 80px;
     cursor: pointer;
     z-index: 0;
-    background-color: #063746;
+    background-color: #bebebe;
     border: 0;
     border-radius: 50px;
     position: absolute;
@@ -82,7 +82,7 @@
 }
 
 .control .circle-click {
-    background-color: #063746;
+    background-color: #bebebe;
     border: 0
 }
 
@@ -122,7 +122,7 @@
 }
 
 .flex:hover {
-    background: #deff8a
+    background: #e6ddec
 }
 
 img {
@@ -161,29 +161,29 @@ img {
 
 @-webkit-keyframes bordering {
     0% {
-        box-shadow: 0 0 rgba(222, 255, 138, .5)
+        box-shadow: 0 0 rgba(223, 218, 230, 0.822)
     }
 
     50% {
-        box-shadow: 0 0 0 8vh rgba(222, 255, 138, .9)
+        box-shadow: 0 0 0 8vh rgba(223, 218, 230, 0.822)
     }
 
     to {
-        box-shadow: 0 0 rgba(222, 255, 138, .5)
+        box-shadow: 0 0 rgba(223, 218, 230, 0.822)
     }
 }
 
 @keyframes bordering {
     0% {
-        box-shadow: 0 0 rgba(222, 255, 138, .5)
+        box-shadow: 0 0 rgba(223, 218, 230, 0.822)
     }
 
     50% {
-        box-shadow: 0 0 0 8vh rgba(222, 255, 138, .9)
+        box-shadow: 0 0 0 8vh rgba(223, 218, 230, 0.822)
     }
 
     to {
-        box-shadow: 0 0 rgba(222, 255, 138, .5)
+        box-shadow: 0 0 rgba(223, 218, 230, 0.822)
     }
 }
 
