--- a/index.css
+++ b/index.css
@@ -51,7 +51,7 @@
 .control .status-talk {
     width: 100vw;
     text-align: left;
-    color: #bebebe;
+    color: #fff;
     z-index: 1;
     padding-left: 50px;
     padding-right: 20px;
@@ -75,7 +75,7 @@
     height: 80px;
     cursor: pointer;
     z-index: 0;
-    background-color: #bebebe;
+    background-color: #fff;
     border: 0;
     border-radius: 50px;
     position: absolute;
@@ -83,7 +83,7 @@
 }
 
 .control .circle-click {
-    background-color: #bebebe;
+    background-color: #fff;
     border: 0
 }
 
